fix: remove smooth-scrollbar, replaced png image to SVG

--- a/src/components/Decoration/Decoration.scss
+++ b/src/components/Decoration/Decoration.scss
@@ -5,7 +5,7 @@
    url('@/assets/bigDecoration.svg'),
    url('@/assets/middleDecoration1.svg'), 
    url('@/assets/middleDecoration2.png'), 
-   url('@/assets/middleDecoration3.png'),
+   url('@/assets/middleDecoration3.svg'),
    url('@/assets/lineDecoration1.svg'),
    url('@/assets/lineDecoration2.svg'),
    url('@/assets/lineDecoration3.svg'),
